fix(Mainpage*): wrong color (#1263)
* fix(Mainpage*): wrong color

--- a/src/Mainpage-obituary/Mainpage-obituary.less
+++ b/src/Mainpage-obituary/Mainpage-obituary.less
@@ -3,7 +3,7 @@
 /**
  * @description 特殊时期，寄托哀思
  */
-@color--primary: @const-color-gray;
+@color--primary: @const-color-darkgray;
 
 /* Variables for root */
 :root {
