--- a/src/variables.less
+++ b/src/variables.less
@@ -1,9 +1,9 @@
 @const-color-black: #000;
-@const-color-gray: #666;
 @const-color-white: #fff;
 @const-color-blue: #36c;
 @const-color-brown: #a60;
 @const-color-darkred: #b32424;
+@const-color-darkgray: #666;
 @const-color-darkgreen: #181;
 @const-color-darkpink: #c71590;
 @const-color-orange: #f28500;
